name:                nexpose
version:             0.0.1.0
synopsis:            Haskell bindings to Nexpose XML Library
homepage:            https://github.com/m15k/hs-nexpose-client
license:             MIT
license-file:        LICENSE
author:              Montez Fitzpatrick <montezf@gmail.com>
maintainer:          montezf@gmail.com
-- copyright:           
category:            Network APIs
build-type:          Simple
cabal-version:       >=1.18
Stability:           Experimental

-- description:         


extra-source-files:  README.md

library
  default-language:    Haskell2010
  hs-source-dirs:      nexpose/src
  exposed-modules:     
    Nexpose.API.Login
    Nexpose.API.Logout
    Nexpose.Transport
    Nexpose.URI
  other-modules:       
    Paths_nexpose
  -- other-extensions:    
  build-depends:      
    base >=4.6 && <4.7,
    bytestring,
    curl >=1.3,
    hexpat,
    hexpat-pickle,
    text >=0.11
    
--  ghc-options:
--    -Wall -fno-warn-orphans

-- executable          nexpose2nagios
--   if flag(build-all)
--     Buildable: True
--   else
--     Buildable: False
--   ghc-options: -Wall -threaded -O2
--   main-is:          Main.hs
--   hs-source-dirs:   app-nexpose2nagios/src
--   build-depends:    
--       base
-- 	, nexpose
    
Source-Repository   head
  Type:             git
  Location:         https://github.com/m15k/hs-nexpose-client
