name:                nexpose
version:             0.0.1.0
synopsis:            Haskell bindings to Nexpose XML API
homepage:            https://github.com/m15k/hs-nexpose-client
license:             MIT
license-file:        LICENSE
author:              Montez Fitzpatrick <montezf@gmail.com>
maintainer:          montezf@gmail.com
copyright:           (c) 2013 Montez Fitzpatrick
category:            Network APIs
build-type:          Simple
cabal-version:       >=1.18
Stability:           Experimental

description:         This package provides Haskell bindings for the Rapid7 Nexpose
					 Vulnerability Management solution.  Rapid7 provides an API 
					 functionality through Web XML interface pages.  This library 
					 aims to be fully api versions 1.1 and 1.2 compliant.

extra-source-files:  README.md

library
  default-language:    Haskell2010
  hs-source-dirs:      nexpose/src
  exposed-modules:     
    Nexpose.API.Failure
    Nexpose.API.Login
    Nexpose.API.Logout
    Nexpose.API.ScanConfig
    Nexpose.API.Site
    Nexpose.API.SiteConfig
    Nexpose.API.SiteDelete
    Nexpose.API.SiteListing
    Nexpose.API.SiteSave
    Nexpose.API.SiteSummary
    Nexpose.IO
    Nexpose.URI
    ReplTest
  other-modules:
    Paths_nexpose
    Text.XML.Expat.PickleExtended
--  other-extensions:    
  build-depends:      
    base >=4.6 && <4.7,
    bytestring,
    curl >=1.3,
    hexpat,
    hexpat-pickle,
    network,
    text >=0.11
    
--  ghc-options:
--    -Wall -fno-warn-orphans

-- executable          nexpose2nagios
--   if flag(build-all)
--     Buildable: True
--   else
--     Buildable: False
--   ghc-options: -Wall -threaded -O2
--   main-is:          Main.hs
--   hs-source-dirs:   app-nexpose2nagios/src
--   build-depends:    
--       base
-- 	, nexpose
    
Source-Repository   head
  Type:             git
  Location:         https://github.com/m15k/hs-nexpose-client
